<resources>
    <string name="app_name">UserRegistrationApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fullname">Fullname</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="zip_code">Zip Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="mobile">Mobile</string>
    <string name="save">Save</string>
    <string name="this_field_is_mandatory">This field is mandatory</string>
    <string name="no_data_found">No Data Found</string>
    <string name="user_registration">User Registration</string>
    <string name="user_created">User created</string>
    <string name="update">Update</string>
    <string name="user_updated">User Updated</string>
    <string name="please_enter_valid_phone_number">Please enter valid phone number</string>
    <string name="please_enter_valid_mobile_number">Please enter valid mobile number</string>


    <string-array name="city_array">
        <item>Ahmedabad</item>
        <item>Rajkot</item>
        <item>Surat</item>
        <item>Vadodra</item>
    </string-array>

    <string-array name="state_array">
        <item>Gujarat</item>
        <item>Rajasthan</item>
        <item>Uttar Pradesh</item>
        <item>Maharastra</item>
    </string-array>

    <string-array name="country_array">
        <item>India</item>
        <item>Sri Lanka</item>
        <item>China</item>
        <item>Bangladesh</item>
    </string-array>

</resources>